portfolio-app/main/default/objects/Balance__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <externalDeveloperName>created</externalDeveloperName>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>