portfolio-app/main/default/objects/Balance__x/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product</description>
    <externalDeveloperName>productid</externalDeveloperName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Balance</relationshipLabel>
    <relationshipName>Balance</relationshipName>
    <type>Lookup</type>
</CustomField>