portfolio-app/main/default/objects/Balance__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Name__c</columns>
    <columns>Balance__c</columns>
    <columns>BalanceAUD__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Balance__c</field>
        <operation>greaterThan</operation>
        <value>10</value>
    </filters>
    <label>All</label>
</ListView>